--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "dependencies": {
     "@bigcommerce/catalyst-client": "^0.7.0",
     "@icons-pack/react-simple-icons": "^9.6.0",
+    "@payloadcms/db-postgres": "3.0.0-beta.98",
+    "@payloadcms/next": "3.0.0-beta.98",
+    "@payloadcms/plugin-cloud": "3.0.0-beta.98",
+    "@payloadcms/richtext-lexical": "3.0.0-beta.98",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -40,12 +44,13 @@
     "lodash.debounce": "^4.0.8",
     "lru-cache": "^11.0.0",
     "lucide-react": "^0.427.0",
-    "next": "^15.0.0-rc.0",
+    "next": "15.0.0-canary.140",
     "next-auth": "5.0.0-beta.20",
     "next-intl": "^3.17.2",
-    "react": "^19.0.0-rc-4f604941-20240830",
+    "payload": "3.0.0-beta.98",
+    "react": "19.0.0-rc-d1afcb43-20240903",
     "react-day-picker": "^8.10.0",
-    "react-dom": "^19.0.0-rc-4f604941-20240830",
+    "react-dom": "19.0.0-rc-d1afcb43-20240903",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
@@ -73,7 +78,7 @@
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^15.0.0-rc.0",
+    "eslint-config-next": "15.0.0-canary.140",
     "monocart-coverage-reports": "^2.10.2",
     "monocart-reporter": "^2.6.5",
     "postcss": "^8.4.40",
